--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.6.4",
     "react-cssfx-loading": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
