--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.8.1",
+    "firebase": "^9.6.8",
     "leaflet": "^1.7.1",
     "leaflet-routing-machine": "^3.2.12",
     "lrm-graphhopper": "^1.3.0",
